--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,8 @@
                 "*.cpp",
                 "-lSDL2",
                 "-lSDL2_image",
+                "-lSDL2_mixer",
+                "-lSDL2_ttf",
                 "-o",
                 "../bin/gin"
             ],
