--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "C/C++: clang++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/bin/gin",
+            "program": "${workspaceRoot}/bin/tilegame",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
